--- a/client/src/Pages/Layout/layout.module.css
+++ b/client/src/Pages/Layout/layout.module.css
@@ -11,18 +11,15 @@
 	position: relative;
 	display: flex;
 	width: 96%;
-	height: 9em;
+	height: 10em;
 	padding: 0 2%;
+	margin-bottom: 5em;
 	border-bottom: 1px solid var(--color-dbx-gray-dark);
 	justify-content: flex-start;
 	align-items: center;
 }
 
 .contentContainer {
-	position: relative;
-	display: flex;
-	width: 100%;
-	height: 50em;
-	justify-content: center;
-	align-items: center;
+	width: 80%;
+	margin-left: 10%;
 }
