--- a/client/src/Pages/Main/main.module.css
+++ b/client/src/Pages/Main/main.module.css
@@ -1,10 +1,49 @@
+.container {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.tagline {
+	margin: 0 0 5em 0;
+	font-size: 2em;
+	font-weight: normal;
+	text-align: center;
+	color: var(--color-text-light);
+}
+
+.leftSide {
+	display: flex;
+	flex-direction: column;
+	width: 50%;
+	align-items: center;
+}
+
+.rightSide {
+	display: flex;
+	flex-direction: column;
+	width: 50%;
+	align-items: center;
+}
+
+.verticalDivider {
+	height: 20em;
+	border-right: 1px solid var(--color-border);
+}
+
 .art {
+	display: flex;
+	column-gap: 1em;
+}
+
+.artItem {
 	width: 15em;
 	height: 15em;
 	fill: var(--color-text-dark);
 }
 
-.text {
-	font-size: 1.3em;
+.formTagline {
+	margin-bottom: 2em;
+	font-size: 1.75em;
 	color: var(--color-text-light);
 }
