--- a/client/src/Pages/SharedLinksReport/SharedLinksReport.module.css
+++ b/client/src/Pages/SharedLinksReport/SharedLinksReport.module.css
@@ -1,15 +1,5 @@
-.container {
-	display: flex;
-	flex-direction: column;
-	row-gap: 5em;
-	align-items: center;
-	justify-content: center;
-}
-
 .tagline {
-	margin: 0;
 	font-size: 2em;
-	font-weight: normal;
 	color: var(--color-text-light);
 }
 
@@ -18,6 +8,8 @@
 	flex-direction: column;
 	width: 100%;
 	align-items: center;
+
+	/* background-color: red; */
 }
 
 .control {
