added personal page for shared links report

--- a/client/src/Pages/SharedLinksReport/SharedLinksReport.module.css
+++ b/client/src/Pages/SharedLinksReport/SharedLinksReport.module.css
@@ -40,6 +40,11 @@
 	color: var(--color-text-dark);
 }
 
+.memberActionsContainer {
+	display: flex;
+	gap: 1em;
+}
+
 .linksTableContainer {
 	width: 100%;
 }
